ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filrouge-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: filrouge.local
      http:
        paths:
          - path: /frontend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
